--- a/Index.html
+++ b/Index.html
@@ -8,5 +8,14 @@
   <div class="container">
    <div class="row">
      <div class="col-6">
-      <img src="
-</body>
+      <img src="joy.jpeg1" class="img-thumbnail" style="width:400px;height:500px;"/><br>
+      <button class="btn btn-primary" type="button">like</button>
+     </div>
+     <div class="col-6">
+      <img src="joy2png" class="img-thumbnail" style="width:400px;height:500px;"/><br>
+      <button class="btn btn-primary" type="button">like</button>
+        </div>
+      </div> 
+    </div>
+  </body>
+</html>
