--- a/Index.html
+++ b/Index.html
@@ -8,11 +8,11 @@
        <div class="container">
           <div class="row">
                <div class="col-6">
-                 <img src="joy" class="img-thumbnail" style="width:400px;height:500px;"/><br>
+                 <img src="joy1.png" class="img-thumbnail" style="width:400px;height:500px;"/><br>
                  <button class="btn btn-primary" type="button"> Like</button>
                </div>
                <div class="col-6">
-                 <img src="Pic2.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
+                 <img src="joy2.png" class="img-thumbnail" style="width:400px;height:500px;"/><br>
                  <button class="btn btn-primary" type="button"> Like</button>
                </div>
          </div>
